--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get:
-  get_storage:
-  encrypt:
+  get: ^4.3.8
+  get_storage: ^2.0.3
+  encrypt: ^5.0.1
+  file_picker: ^4.1.5
+  url_launcher: ^6.0.12
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
